fixed some alignment and positioning issues- buttons are now fixed relative to the bottom of the screen and the headers are centered

--- a/style.css
+++ b/style.css
@@ -44,10 +44,9 @@
     display: none; 
     width: 100%;
     height: 100%;
-    margin-left: 8px; 
-    margin-top: 8px; 
+    margin-top: 1rem; 
     background-color: #f4a334;
-    overflow: hidden;
+    overflow: hidden;    
 }
 
 .screen.active {
@@ -55,6 +54,12 @@
     flex-direction: column;
     align-items: center;
     padding-left: 0; 
+}
+
+.links {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
 }
 
 html, body {
@@ -74,6 +79,8 @@ html, body {
 .buttons {
     display: flex; 
     flex-direction: row;
+    position: absolute; 
+    bottom: 1rem; 
 }
 
 .cake-recipe {
